Tried to make it a pwa and removed some bugs on mobile devices

--- a/client/src/pages/collection/collection.styles.scss
+++ b/client/src/pages/collection/collection.styles.scss
@@ -1,7 +1,9 @@
 .collection-page {
   display: flex;
   flex-direction: column;
-
+  @media screen and (max-width : 800px){
+   align-items: center;
+  }
   .title {
     font-size: 38px;
     margin: 0 auto 30px;
@@ -11,6 +13,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
+
+      @media screen and (max-width : 800px){
+       grid-template-columns: 1fr 1fr;
+       grid-gap: 15px;
+     }
 
     & .collection-item {
       margin-bottom: 30px;
